--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.12",
     "contentful-management": "^8.2.0",
+    "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.2.2",
