--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.12",
     "contentful-management": "^8.2.0",
+    "js-cookie": "^3.0.1",
     "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
