--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cookbook_contentful",
+  "homepage": "https://slauko.github.io/cookbook_contentful",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.12",
     "contentful-management": "^8.2.0",
+    "gh-pages": "^3.2.3",
     "js-cookie": "^3.0.1",
     "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
